crates/plotnik-tests/tests/02-parser/recovery_incomplete/missing_negated_field_name.txt
Q = (call -)
------------------ DIAGNOSTICS -------------------
error: expected a grammar field name
 --> query.ptk:1:12
  |
1 | Q = (call -)
  |            ^
  |
help: e.g., `-value`
